--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
                 <button>/</button>
                 
             </div>
-            <button id="equal">=</button>
-            <button id="clear">clr</button>
-            <button id="backspace">↩</button>
+            <div class="special">
+                <button id="equal">=</button>
+                <button id="clear">clr</button>
+                <button id="backspace">↩</button>
+            </div>
         </div>
     </div>
 </body>
